<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">loadapp_channel</string>
    <string name="notification_channel_name" translatable="false">LoadApp</string>


    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="button_defaulttext">Download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_text">Glide - Image Loading Library by BlumpTech</string>
    <string name="loadApp_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="download_image">Download Image</string>
    <string name="toast_nothing_selected">Please select the file to download</string>
    <string name="check_status">Check the status</string>
    <string name="file_name">File name:</string>
    <string name="download_status">Status:</string>
    <string name="ok">Ok</string>

</resources>
